[package]
name = "dcprov"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.11", features=["json"]}
serde = {version="1.0.144", features=["derive"]}
serde_json = "1.0.85"
tokio = {version = "1.21.1", features = ["full"]}
url = "2.3.1"
chrono = {version="0.4.22", features = ["serde"]}
clap = { version = "3.2.21", features = ["derive"] }
keytar = "0.1.6"
colored = "2.0.0"