[package]
name = "dcprov"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# DRACOON Provisioning API
dco3 = "0.6.1"

# async runtime
tokio = {version = "1", features = ["full"]}

# CLI
clap = { version = "4", features = ["derive"] }
keyring = "2"
colored = "2"
dialoguer = "0.11"

# utils (logging, errors)
tracing = "*"
tracing-subscriber = "*"
thiserror = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "s"